--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,6 @@
 
+
+
 /* 
 
     You can write your own styles here...
@@ -10,3 +12,29 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+.traffic-light {
+    background: black;
+    padding: 10px;
+    display: inline-block;
+    margin: auto;
+    border-radius: 20px;
+    position: absolute;
+    left: 150px;
+
+  }
+  
+  .light {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+   
+  }
+
+  .red{background: rgb(190, 2, 2);}
+  .yellow{background: rgb(255, 179, 0);}
+  .green{background: rgb(3, 168, 3);}
+  
+  .shine {box-shadow: 4px 4px 20px 20px rgba(217, 215, 166, 0.837);}
+  
+
